--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,5 +1,7 @@
 .App {
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  background-color: yellowgreen;
   * {
     margin: 0;
     padding: 0;
