--- a/client/src/components/Inputsection/inputsection.scss
+++ b/client/src/components/Inputsection/inputsection.scss
@@ -1,13 +1,28 @@
 .inputSection {
     width: 100%;
     height: 30px;
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
     input {
-        width: 60%;
+        border-radius: .5rem;
+        border: none;
+        width: 100%;
         height: 100%;
         padding: 2px 5px;
     }
     button {
         width: 20%;
+        border-radius: .5rem;
+        border: none;
         height: 100%;
+        background-color: yellow;
+        font-weight: 700;
+        transition: all 0.1s ease-in-out;
+        &:hover {
+            // opacity: .7;
+            cursor: pointer;
+            transform: scale(1.01);
+        }
     }
 }
