--- a/client/src/components/Todolist/todolist.scss
+++ b/client/src/components/Todolist/todolist.scss
@@ -1,28 +1,39 @@
 .todosContainer {
     background-color: azure;
-    width: 80%;
+    width: 100%;
     margin: 10px auto;
     text-align: start;
     padding: 0 5px;
+    border-radius: .5rem;
+    padding: .6rem;
+    background-color: yellow;
 
     .todo {
         width: 100%;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+        padding: .5rem;
+        gap: 0.2rem;
+        font-size: 1.5rem;
         div {
-
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: .5rem;
             span {
+                transition: all 0.1s ease-in-out;
                 &:nth-child(1):hover {
                     color: green;
+                    cursor: pointer;
+                    transform: scale(1.2);
                 }
                 &:nth-child(2):hover {
+                    cursor: pointer;
                     color: red;
+                    transform: scale(1.2);
                 }
             }
         }
     }
-     input {
-        border: none;
-     }
 }
